--- a/templates/project/index.html.twig
+++ b/templates/project/index.html.twig
@@ -18,7 +18,7 @@
 
             <p>{{ post.summary }}</p>
 
-            {{ include('blog/_post_tags.html.twig') }}
+            {{ include('project/_post_tags.html.twig') }}
         </article>
     {% else %}
         <div class="well">{{ 'post.no_posts_found'|trans }}</div>
