--- a/templates/admin/project/show.html.twig
+++ b/templates/admin/project/show.html.twig
@@ -16,7 +16,7 @@
 
     {{ post.content|markdown_to_html|sanitize_html }}
 
-    {{ include('blog/_post_tags.html.twig') }}
+    {{ include('project/_post_tags.html.twig') }}
 {% endblock %}
 
 {% block sidebar %}
@@ -27,7 +27,7 @@
     </div>
 
     <div class="section">
-        {{ include('admin/blog/_delete_form.html.twig', {post: post}, with_context = false) }}
+        {{ include('admin/project/_delete_form.html.twig', {post: post}, with_context = false) }}
     </div>
 
     {{ parent() }}
