--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,16 +38,35 @@
 
                                 {% block header_navigation_links %}
                                     <li>
-                                        <a href="{{ path('blog_index') }}">
+                                        <a href="{{ path('news_index') }}">
                                             <i class="fa fa-home" aria-hidden="true"></i> {{ 'menu.homepage'|trans }}
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="{{ path('blog_index') }}">
+                                            <i class="fa fa-folder-open" aria-hidden="true"></i> {{ 'menu.projects'|trans }}
                                         </a>
                                     </li>
 
                                     {% if is_granted('ROLE_ADMIN') %}
-                                        <li>
-                                            <a href="{{ path('admin_post_index') }}">
+                                        <li class="dropdown">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
                                                 <i class="fa fa-lock" aria-hidden="true"></i> {{ 'menu.admin'|trans }}
+                                                <span class="caret"></span>
                                             </a>
+                                            <ul class="dropdown-menu" role="menu">
+                                                    <li>
+                                                        <a href="{{ path('admin_news_index') }}">
+                                                            <i class="fa fa-newspaper" aria-hidden="true"></i> {{ 'menu.news'|trans }}
+                                                        </a>
+                                                    </li>
+                                                    <li class="divider"></li>
+                                                    <li>
+                                                        <a href="{{ path('admin_post_index') }}">
+                                                            <i class="fa fa-folder-open" aria-hidden="true"></i> {{ 'menu.projects'|trans }}
+                                                        </a>
+                                                    </li>
+                                            </ul>
                                         </li>
                                     {% endif %}
                                 {% endblock %}
