--- a/templates/admin/projects/_delete_form.html.twig
+++ b/templates/admin/projects/_delete_form.html.twig
@@ -1,5 +1,5 @@
-{{ include('project/_delete_post_confirmation.html.twig') }}
-<form action="{{ url('admin_post_delete', {id: post.id}) }}" method="post" data-confirmation="true" id="delete-form">
+{{ include('projects/_delete_project_confirmation.html.twig') }}
+<form action="{{ url('admin_project_delete', {id: post.id}) }}" method="post" data-confirmation="true" id="delete-form">
     <input type="hidden" name="token" value="{{ csrf_token('delete') }}" />
     <button type="submit" class="btn btn-lg btn-block btn-danger">
         <i class="fa fa-trash" aria-hidden="true"></i>
