--- a/templates/projects/comment_form_error.html.twig
+++ b/templates/projects/comment_form_error.html.twig
@@ -6,6 +6,6 @@
     <h1 class="text-danger">{{ 'title.comment_error'|trans }}</h1>
 
     <div class="well">
-        {{ include('project/_comment_form.html.twig') }}
+        {{ include('projects/_comment_form.html.twig') }}
     </div>
 {% endblock %}
