--- a/templates/projects/index.xml.twig
+++ b/templates/projects/index.xml.twig
@@ -5,15 +5,15 @@
         <description>{{ 'rss.description'|trans }}</description>
         <pubDate>{{ 'now'|date('r', timezone='GMT') }}</pubDate>
         <lastBuildDate>{{ (paginator.results|last).publishedAt|default('now')|date('r', timezone='GMT') }}</lastBuildDate>
-        <link>{{ url('blog_index') }}</link>
+        <link>{{ url('projects_index') }}</link>
         <language>{{ app.request.locale }}</language>
 
         {% for post in paginator.results %}
             <item>
                 <title>{{ post.title }}</title>
                 <description>{{ post.summary }}</description>
-                <link>{{ url('blog_post', {'slug': post.slug}) }}</link>
-                <guid>{{ url('blog_post', {'slug': post.slug}) }}</guid>
+                <link>{{ url('projects_project', {'slug': post.slug}) }}</link>
+                <guid>{{ url('projects_project', {'slug': post.slug}) }}</guid>
                 <pubDate>{{ post.publishedAt|date(format='r', timezone='GMT') }}</pubDate>
                 <author>{{ post.author.email }}</author>
                 {% for tag in post.tags %}
