Post to project (#8)
* database error fix

* finished?

* fixed!

* post to project complete

--- a/templates/admin/projects/_form.html.twig
+++ b/templates/admin/projects/_form.html.twig
@@ -2,7 +2,7 @@
 
 {% if show_confirmation|default(false) %}
     {% set attr = {'data-confirmation': 'true'} %}
-    {{ include('blog/_delete_post_confirmation.html.twig') }}
+    {{ include('projects/_delete_project_confirmation.html.twig') }}
 {% endif %}
 
 {{ form_start(form, {attr: attr|default({})}) }}
@@ -13,7 +13,7 @@
     </button>
 
     {% if include_back_to_home_link|default(false) %}
-        <a href="{{ path('admin_post_index') }}" class="btn btn-link">
+        <a href="{{ path('admin_project_index') }}" class="btn btn-link">
             <i class="fa fa-list-alt" aria-hidden="true"></i> {{ 'action.back_to_list'|trans }}
         </a>
     {% endif %}
