--- a/templates/admin/projects/edit.html.twig
+++ b/templates/admin/projects/edit.html.twig
@@ -1,11 +1,11 @@
 {% extends 'admin/layout.html.twig' %}
 
-{% block body_id 'admin_post_edit' %}
+{% block body_id 'admin_project_edit' %}
 
 {% block main %}
     <h1>{{ 'title.edit_post'|trans({'%id%': post.id}) }}</h1>
 
-    {{ include('admin/blog/_form.html.twig', {
+    {{ include('admin/projects/_form.html.twig', {
         form: form,
         button_label: 'action.save'|trans,
         include_back_to_home_link: true,
@@ -14,13 +14,13 @@
 
 {% block sidebar %}
     <div class="section">
-        <a href="{{ path('admin_post_show', {id: post.id}) }}" class="btn btn-lg btn-block btn-success">
+        <a href="{{ path('admin_project_show', {id: post.id}) }}" class="btn btn-lg btn-block btn-success">
             <i class="fa fa-eye" aria-hidden="true"></i> {{ 'action.show_post'|trans }}
         </a>
     </div>
 
     <div class="section actions">
-        {{ include('admin/blog/_delete_form.html.twig', {post: post}, with_context = false) }}
+        {{ include('admin/projects/_delete_form.html.twig', {post: post}, with_context = false) }}
     </div>
 
     {{ parent() }}
