--- a/templates/admin/projects/show.html.twig
+++ b/templates/admin/projects/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/layout.html.twig' %}
 
-{% block body_id 'admin_post_show' %}
+{% block body_id 'admin_project_show' %}
 
 {% block main %}
     <h1>{{ post.title }}</h1>
@@ -16,18 +16,18 @@
 
     {{ post.content|markdown_to_html|sanitize_html }}
 
-    {{ include('blog/_post_tags.html.twig') }}
+    {{ include('projects/_project_tags.html.twig') }}
 {% endblock %}
 
 {% block sidebar %}
     <div class="section">
-        <a href="{{ path('admin_post_edit', {id: post.id}) }}" class="btn btn-lg btn-block btn-success">
+        <a href="{{ path('admin_project_edit', {id: post.id}) }}" class="btn btn-lg btn-block btn-success">
             <i class="fa fa-edit" aria-hidden="true"></i> {{ 'action.edit_contents'|trans }}
         </a>
     </div>
 
     <div class="section">
-        {{ include('admin/blog/_delete_form.html.twig', {post: post}, with_context = false) }}
+        {{ include('admin/projects/_delete_form.html.twig', {post: post}, with_context = false) }}
     </div>
 
     {{ parent() }}
