--- a/templates/projects/index.html.twig
+++ b/templates/projects/index.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block body_id 'blog_index' %}
+{% block body_id 'projects_index' %}
 
 {% block main %}
     {% for post in paginator.results %}
         <article class="post">
             <h2>
-                <a href="{{ path('blog_post', {slug: post.slug}) }}">
+                <a href="{{ path('projects_project', {slug: post.slug}) }}">
                     {{ post.title }}
                 </a>
             </h2>
@@ -18,7 +18,7 @@
 
             <p>{{ post.summary }}</p>
 
-            {{ include('blog/_post_tags.html.twig') }}
+            {{ include('projects/_project_tags.html.twig') }}
         </article>
     {% else %}
         <div class="well">{{ 'post.no_posts_found'|trans }}</div>
@@ -28,7 +28,7 @@
         <div class="navigation text-center">
             <ul class="pagination">
                 {% if paginator.hasPreviousPage %}
-                    <li class="prev"><a href="{{ path('blog_index_paginated', {page: paginator.previousPage}) }}" rel="previous"><i class="fa fw fa-long-arrow-left"></i> {{ 'paginator.previous'|trans }}</a></li>
+                    <li class="prev"><a href="{{ path('projects_index_paginated', {page: paginator.previousPage}) }}" rel="previous"><i class="fa fw fa-long-arrow-left"></i> {{ 'paginator.previous'|trans }}</a></li>
                 {% else %}
                     <li class="prev disabled"><span><i class="fa fw fa-arrow-left"></i> {{ 'paginator.previous'|trans }}</span></li>
                 {% endif %}
@@ -37,12 +37,12 @@
                     {% if i == paginator.currentPage %}
                         <li class="active"><span>{{ i }} <span class="sr-only">{{ 'paginator.current'|trans }}</span></span></li>
                     {% else %}
-                        <li><a href="{{ path('blog_index_paginated', {page: i}) }}">{{ i }}</a></li>
+                        <li><a href="{{ path('projects_index_paginated', {page: i}) }}">{{ i }}</a></li>
                     {% endif %}
                 {% endfor %}
 
                 {% if paginator.hasNextPage %}
-                    <li class="next"><a href="{{ path('blog_index_paginated', {page: paginator.nextPage}) }}" rel="next">{{ 'paginator.next'|trans }} <i class="fa fw fa-arrow-right"></i></a></li>
+                    <li class="next"><a href="{{ path('projects_index_paginated', {page: paginator.nextPage}) }}" rel="next">{{ 'paginator.next'|trans }} <i class="fa fw fa-arrow-right"></i></a></li>
                 {% else %}
                     <li class="next disabled"><span>{{ 'paginator.next'|trans }} <i class="fa fw fa-arrow-right"></i></span></li>
                 {% endif %}
