--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -6,19 +6,7 @@
     {{ encore_entry_link_tags('admin') }}
 {% endblock %}
 
-{% block header_navigation_links %}
-    <li>
-        <a href="{{ path('admin_project_index') }}">
-            <i class="fa fa-list-alt" aria-hidden="true"></i> {{ 'menu.post_list'|trans }}
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('projects_index') }}">
-            <i class="fa fa-home" aria-hidden="true"></i> {{ 'menu.back_to_blog'|trans }}
-        </a>
-    </li>
-{% endblock %}
-
 {% block javascripts %}
+    {{ encore_entry_script_tags('admin') }}
     {{ parent() }}
 {% endblock %}
