--- a/templates/admin/projects/index.html.twig
+++ b/templates/admin/projects/index.html.twig
@@ -3,7 +3,7 @@
 {% block body_id 'admin_project_index' %}
 
 {% block main %}
-    <h1>{{ 'title.post_list'|trans }}</h1>
+    <h1>{{ 'title.project_list'|trans }}</h1>
 
     <table class="table table-striped table-middle-aligned">
         <thead>
@@ -32,7 +32,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="4" align="center">{{ 'post.no_posts_found'|trans }}</td>
+                <td colspan="4" align="center">{{ 'project.no_projects_found'|trans }}</td>
            </tr>
         {% endfor %}
         </tbody>
@@ -42,7 +42,7 @@
 {% block sidebar %}
     <div class="section actions">
         <a href="{{ path('admin_project_new') }}" class="btn btn-lg btn-block btn-success">
-            <i class="fa fa-plus" aria-hidden="true"></i> {{ 'action.create_post'|trans }}
+            <i class="fa fa-plus" aria-hidden="true"></i> {{ 'action.create_project'|trans }}
         </a>
     </div>
 
