--- a/templates/admin/projects/new.html.twig
+++ b/templates/admin/projects/new.html.twig
@@ -3,7 +3,7 @@
 {% block body_id 'admin_project_new' %}
 
 {% block main %}
-    <h1>{{ 'title.post_new'|trans }}</h1>
+    <h1>{{ 'title.project_new'|trans }}</h1>
 
     {{ form_start(form) }}
         {{ form_row(form.title) }}
@@ -13,7 +13,7 @@
         {{ form_row(form.tags) }}
 
         <button type="submit" class="btn btn-primary">
-            <i class="fa fa-save" aria-hidden="true"></i> {{ 'label.create_post'|trans }}
+            <i class="fa fa-save" aria-hidden="true"></i> {{ 'label.create_project'|trans }}
         </button>
         {{ form_widget(form.saveAndCreateNew, {label: 'label.save_and_create_new', attr: {class: 'btn btn-primary'}}) }}
         <a href="{{ path('admin_project_index') }}" class="btn btn-link">
