--- a/templates/projects/search.html.twig
+++ b/templates/projects/search.html.twig
@@ -12,10 +12,10 @@
         <div class="form-group">
             <input name="q"
                    class="form-control search-field"
-                   placeholder="{{ 'post.search_for'|trans }}"
+                   placeholder="{{ 'project.search_for'|trans }}"
                    autocomplete="off"
                    autofocus
-                   data-no-results-message="{{ 'post.search_no_results'|trans }}"
+                   data-no-results-message="{{ 'project.search_no_results'|trans }}"
             >
         </div>
     </form>
