--- a/templates/admin/news/index.html.twig
+++ b/templates/admin/news/index.html.twig
@@ -32,7 +32,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="4" align="center">{{ 'news.no_posts_found'|trans }}</td>
+                <td colspan="4" align="center">{{ 'news.no_news_found'|trans }}</td>
            </tr>
         {% endfor %}
         </tbody>
