--- a/templates/admin/projects/new.html.twig
+++ b/templates/admin/projects/new.html.twig
@@ -9,6 +9,7 @@
         {{ form_row(form.title) }}
         {{ form_row(form.summary) }}
         {{ form_row(form.content) }}
+        {{ form_row(form.imageFile) }}
         {{ form_row(form.publishedAt) }}
         {{ form_row(form.tags) }}
 
