--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,19 +1,13 @@
-// setting the value of this variable to an empty data URL is the only working solution
-// to load the Bootswatch web fonts locally and avoid loading them from Google servers
-// see https://github.com/thomaspark/bootswatch/issues/55#issuecomment-298093182
-$web-font-path: 'data:text/css;base64,';
 
-// Make sure the bootstrap-sass and lato fonts are resolved correctly
-$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
+
 $lato-font-path: '~lato-font/fonts';
 
-@import "~bootswatch/Slate/variables";
-@import "~bootstrap-sass/assets/stylesheets/bootstrap";
-@import "~bootswatch/Slate/bootswatch";
+@import "~bootswatch/dist/Slate/variables";
+@import "~bootstrap/scss/bootstrap";
+@import "~bootswatch/dist/Slate/bootswatch";
 @import "~@fortawesome/fontawesome-free/css/all.css";
 @import "~@fortawesome/fontawesome-free/css/v4-shims.css";
 @import "~highlight.js/styles/solarized-light.css";
-
 // pick the Lato fonts individually to avoid importing the entire font family
 @import '~lato-font/scss/public-api';
 @include lato-include-font('normal');
@@ -81,13 +75,13 @@ header .locales {
   min-width: 190px;
 }
 header .locales a {
-  color: #212529;
+  color: #aaa;
   padding: 3px 15px;
 }
 header .locales a small {
   border-radius: 4px;
   border: 2px solid #dee2e6;
-  color: #7b8a8b;
+  color: #aaa;
   float: left;
   font-size: 12px;
   line-height: 1.1;
@@ -346,4 +340,29 @@ body#blog_search .post-metadata {
   margin-bottom: 8px;
 }
 
+.flex_row_project{
+  display: flex;
+  justify-content: space-between;
+}
 
+.input-group-addon{
+  padding: 0.75rem 1rem;
+}
+
+.input-group{
+  flex-wrap: nowrap!important;
+}
+
+.bootstrap-datetimepicker-widget.dropdown-menu {
+  width: auto!important;
+}
+
+.dropdown-menu{
+  z-index: 2000!important;
+}
+
+.sticky-under-nav{
+  position: sticky;
+  top: 80px;
+  z-index: 500;
+}
