--- a/templates/admin/projects/show.html.twig
+++ b/templates/admin/projects/show.html.twig
@@ -9,17 +9,25 @@
         <span class="metadata"><i class="fa fa-calendar"></i> {{ post.publishedAt|format_datetime('long', 'medium', '', 'UTC') }}</span>
         <span class="metadata"><i class="fa fa-user"></i> {{ post.author.fullName }}</span>
     </p>
+    <img style="max-width: 100%; height: auto;" src="{{ vich_uploader_asset(post) }}" alt="{{ post.image }}" />
 
     <div class="well">
         <p class="m-b-0"><strong>{{ 'label.summary'|trans }}</strong>: {{ post.summary }}</p>
     </div>
-
     {{ post.content|markdown_to_html|sanitize_html }}
 
     {{ include('projects/_project_tags.html.twig') }}
 {% endblock %}
 
 {% block sidebar %}
+    {% if post.projectFilesName %}
+    <div class="section">
+        <a class="btn btn-lg btn-block btn-info" href="{{ vich_uploader_asset(post,'projectFiles') }}" download>
+            <i class="fa fa-download" aria-hidden="true"></i> {{ 'action.download'|trans }}
+        </a>
+    </div>
+    {% endif %}
+
     <div class="section">
         <a href="{{ path('admin_project_edit', {id: post.id}) }}" class="btn btn-lg btn-block btn-success">
             <i class="fa fa-edit" aria-hidden="true"></i> {{ 'action.edit_contents'|trans }}
