--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="{{ app.request.locale }}">
     <head>
@@ -14,53 +13,45 @@
     <body id="{% block body_id %}{% endblock %}">
 
         {% block header %}
-            <header>
-                <div class="navbar navbar-default navbar-static-top" role="navigation">
-                    <div class="container">
-                        <div class="navbar-header col-md-3 col-lg-2">
+            <header class="sticky-top">
+                <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
                             <a class="navbar-brand" href="{{ path('homepage') }}">
                                 Our Projects
                             </a>
-
-                            <button type="button" class="navbar-toggle"
-                                    data-toggle="collapse"
-                                    data-target=".navbar-collapse">
-                                <span class="sr-only">{{ 'menu.toggle_nav'|trans }}</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
                             </button>
-                        </div>
-                        <div class="navbar-collapse collapse">
-                            <ul class="nav navbar-nav navbar-right">
+
+                        <div class="collapse navbar-collapse" id="navbarResponsive">
+                            <ul class="nav navbar-nav ml-auto">
 
                                 {% block header_navigation_links %}
-                                    <li>
-                                        <a href="{{ path('news_index') }}">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{{ path('news_index') }}">
                                             <i class="fa fa-home" aria-hidden="true"></i> {{ 'menu.homepage'|trans }}
                                         </a>
                                     </li>
-                                    <li>
-                                        <a href="{{ path('projects_index') }}">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="{{ path('projects_index') }}">
                                             <i class="fa fa-folder-open" aria-hidden="true"></i> {{ 'menu.projects'|trans }}
                                         </a>
                                     </li>
 
                                     {% if is_granted('ROLE_ADMIN') %}
-                                        <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                                        <li class="dropdown nav-item pointer" >
+                                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
                                                 <i class="fa fa-lock" aria-hidden="true"></i> {{ 'menu.admin'|trans }}
                                                 <span class="caret"></span>
                                             </a>
                                             <ul class="dropdown-menu" role="menu">
                                                     <li>
-                                                        <a href="{{ path('admin_news_index') }}">
+                                                        <a class="dropdown-item" href="{{ path('admin_news_index') }}">
                                                             <i class="fa fa-newspaper" aria-hidden="true"></i> {{ 'menu.news'|trans }}
                                                         </a>
                                                     </li>
                                                     <li class="divider"></li>
                                                     <li>
-                                                        <a href="{{ path('admin_project_index') }}">
+                                                        <a class="dropdown-item" href="{{ path('admin_project_index') }}">
                                                             <i class="fa fa-folder-open" aria-hidden="true"></i> {{ 'menu.projects'|trans }}
                                                         </a>
                                                     </li>
@@ -69,31 +60,31 @@
                                     {% endif %}
                                 {% endblock %}
 
-                                <li>
-                                    <a href="{{ path('projects_search') }}"> <i class="fa fa-search"></i> {{ 'menu.search'|trans }}</a>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{{ path('projects_search') }}"> <i class="fa fa-search"></i> {{ 'menu.search'|trans }}</a>
                                 </li>
 
-                                    <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="user">
+                                    <li class="dropdown nav-item pointer">
+                                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="user">
                                             <i class="fa fa-user" aria-hidden="true"></i>
                                             <span class="caret"></span>
                                         </a>
-                                        <ul class="dropdown-menu user" role="menu" aria-labelledby="user">
+                                        <ul class="dropdown-menu dropdown-menu-right user" role="menu" aria-labelledby="user">
                                             {% if app.user %}
                                             <li>
-                                                <a href="{{ path('user_edit') }}">
+                                                <a class="dropdown-item" href="{{ path('user_edit') }}">
                                                     <i class="fa fa-edit" aria-hidden="true"></i> {{ 'menu.user'|trans }}
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a href="{{ path('security_logout') }}">
+                                                <a class="dropdown-item" href="{{ path('security_logout') }}">
                                                     <i class="fa fa-sign-out" aria-hidden="true"></i> {{ 'menu.logout'|trans }}
                                                 </a>
                                             </li>
                                             {% else %}
                                                 <li>
-                                                    <a href="{{ path('security_login') }}">
+                                                    <a class="dropdown-item" href="{{ path('security_login') }}">
                                                         <i class="fa fa-sign-in" aria-hidden="true"></i> {{ 'menu.login'|trans }}
                                                     </a>
                                                 </li>
@@ -101,22 +92,21 @@
                                         </ul>
                                     </li>
 
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" id="locales">
+                                <li class="dropdown nav-item pointer">
+                                    <a href="#" class="nav-link dropdown-toggle"  data-toggle="dropdown" role="button" aria-expanded="false" id="locales">
                                         <i class="fa fa-globe" aria-hidden="true"></i>
                                         <span class="caret"></span>
                                         <span class="sr-only">{{ 'menu.choose_language'|trans }}</span>
                                     </a>
-                                    <ul class="dropdown-menu locales" role="menu" aria-labelledby="locales">
+                                    <ul class="dropdown-menu dropdown-menu-right locales" role="menu" aria-labelledby="locales">
                                         {% for locale in locales() %}
-                                            <li {% if app.request.locale == locale.code %}aria-checked="true" class="active"{% else %}aria-checked="false"{% endif %} role="menuitem"><a href="{{ path(app.request.get('_route', 'projects_index'), app.request.get('_route_params', [])|merge({_locale: locale.code})) }}">{{ locale.name|capitalize }} <small>{{ locale.code[0:2] }}</small></a></li>
+                                            <li {% if app.request.locale == locale.code %}aria-checked="true" class="active"{% else %}aria-checked="false"{% endif %} role="menuitem"><a class="dropdown-item" href="{{ path(app.request.get('_route', 'projects_index'), app.request.get('_route_params', [])|merge({_locale: locale.code})) }}">{{ locale.name|capitalize }} <small>{{ locale.code[0:2] }}</small></a></li>
                                         {% endfor %}
                                     </ul>
                                 </li>
                             </ul>
                         </div>
-                    </div>
-                </div>
+                </nav>
             </header>
         {% endblock %}
 
@@ -129,7 +119,7 @@
                         {% block main %}{% endblock %}
                     </div>
                     <div id="sidebar" class="col-sm-3">
-                        {% block sidebar %}{% endblock %}
+                        <div class="section sticky-under-nav">{% block sidebar %}{% endblock %}</div>
                     </div>
                 </div>
             {% endblock %}
