--- a/templates/projects/index.html.twig
+++ b/templates/projects/index.html.twig
@@ -5,19 +5,23 @@
 {% block main %}
     {% for post in paginator.results %}
         <article class="post">
-            <h2>
-                <a href="{{ path('projects_project', {slug: post.slug}) }}">
-                    {{ post.title }}
-                </a>
-            </h2>
+           <div class="flex_row_project">
+               <div>
+                   <h2>
+                    <a href="{{ path('projects_project', {slug: post.slug}) }}">
+                        {{ post.title }}
+                    </a>
+                   </h2>
 
-            <p class="post-metadata">
-                <span class="metadata"><i class="fa fa-calendar"></i> {{ post.publishedAt|format_datetime('long', 'medium', '', 'UTC') }}</span>
-                <span class="metadata"><i class="fa fa-user"></i> {{ post.author.fullName }}</span>
-            </p>
+                    <p class="post-metadata">
+                        <span class="metadata"><i class="fa fa-calendar"></i> {{ post.publishedAt|format_datetime('long', 'medium', '', 'UTC') }}</span>
+                        <span class="metadata"><i class="fa fa-user"></i> {{ post.author.fullName }}</span>
+                    </p>
 
-            <p>{{ post.summary }}</p>
-
+                    <p>{{ post.summary }}</p>
+               </div>
+               <div style="margin:auto;"><img style="max-width: 300px; height: auto; margin:auto;" src="{{ vich_uploader_asset(post) }}" alt="{{ post.image }}" /></div>
+           </div>
             {{ include('projects/_project_tags.html.twig') }}
         </article>
     {% else %}
@@ -28,23 +32,23 @@
         <div class="navigation text-center">
             <ul class="pagination">
                 {% if paginator.hasPreviousPage %}
-                    <li class="prev"><a href="{{ path('projects_index_paginated', {page: paginator.previousPage}) }}" rel="previous"><i class="fa fw fa-long-arrow-left"></i> {{ 'paginator.previous'|trans }}</a></li>
+                    <li><a class="page-link" href="{{ path('projects_index_paginated', {page: paginator.previousPage}) }}" rel="previous"><i class="fa fw fa-long-arrow-left"></i> {{ 'paginator.previous'|trans }}</a></li>
                 {% else %}
-                    <li class="prev disabled"><span><i class="fa fw fa-arrow-left"></i> {{ 'paginator.previous'|trans }}</span></li>
+                    <li class="page-item"><span class="page-link"><i class="fa fw fa-arrow-left"></i> {{ 'paginator.previous'|trans }}</span></li>
                 {% endif %}
 
                 {% for i in 1..paginator.lastPage %}
                     {% if i == paginator.currentPage %}
-                        <li class="active"><span>{{ i }} <span class="sr-only">{{ 'paginator.current'|trans }}</span></span></li>
+                        <li class="page-item active"><span class="page-link">{{ i }} <span class="sr-only">{{ 'paginator.current'|trans }}</span></span></li>
                     {% else %}
-                        <li><a href="{{ path('projects_index_paginated', {page: i}) }}">{{ i }}</a></li>
+                        <li class="page-item"><a class="page-link" href="{{ path('projects_index_paginated', {page: i}) }}">{{ i }}</a></li>
                     {% endif %}
                 {% endfor %}
 
                 {% if paginator.hasNextPage %}
-                    <li class="next"><a href="{{ path('projects_index_paginated', {page: paginator.nextPage}) }}" rel="next">{{ 'paginator.next'|trans }} <i class="fa fw fa-arrow-right"></i></a></li>
+                    <li class="page-item"><a class="page-link" href="{{ path('projects_index_paginated', {page: paginator.nextPage}) }}" rel="next">{{ 'paginator.next'|trans }} <i class="fa fw fa-arrow-right"></i></a></li>
                 {% else %}
-                    <li class="next disabled"><span>{{ 'paginator.next'|trans }} <i class="fa fw fa-arrow-right"></i></span></li>
+                    <li class="page-item disabled"><span class="page-link">{{ 'paginator.next'|trans }} <i class="fa fw fa-arrow-right"></i></span></li>
                 {% endif %}
             </ul>
         </div>
