--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,17 +44,21 @@
                                                 <span class="caret"></span>
                                             </a>
                                             <ul class="dropdown-menu" role="menu">
+                                                    <!-- MADE BY ARTUR WENDA -->
                                                     <li>
                                                         <a class="dropdown-item" href="{{ path('admin_news_index') }}">
                                                             <i class="fa fa-newspaper" aria-hidden="true"></i> {{ 'menu.news'|trans }}
                                                         </a>
                                                     </li>
+                                                    <!-- END MADE BY ARTUR WENDA -->
+                                                    <!-- MADE BY MACIEJ MORYŃ -->
                                                     <li class="divider"></li>
                                                     <li>
                                                         <a class="dropdown-item" href="{{ path('admin_project_index') }}">
                                                             <i class="fa fa-folder-open" aria-hidden="true"></i> {{ 'menu.projects'|trans }}
                                                         </a>
                                                     </li>
+                                                    <!-- END MADE BY MACIEJ MORYŃ -->
                                             </ul>
                                         </li>
                                     {% endif %}
