--- a/templates/news/_delete_news_confirmation.html.twig
+++ b/templates/news/_delete_news_confirmation.html.twig
@@ -1,3 +1,5 @@
+<!-- MADE BY ARTUR WENDA -->
+
 <div class="modal fade" id="confirmationModal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
