--- a/templates/projects/_delete_project_confirmation.html.twig
+++ b/templates/projects/_delete_project_confirmation.html.twig
@@ -1,3 +1,5 @@
+<!-- MADE BY MACIEJ MORYŃ -->
+
 <div class="modal fade" id="confirmationModal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
